chore: Refactor collision detection and food eating logic